syntax = "proto3";
import "google/protobuf/timestamp.proto";
package messenger;

enum MessageStatus {
  READ = 0;
  SENT = 1;
  DELIVERED = 2;
  MODIFIED = 3;
}

message SendMessageRequest{
  google.protobuf.Timestamp sentAt=1;
  string text=2;
  string chatId=3;
}
message SendMessageResponse{
  string id=1;
  bool success=2;
}

service Messenger{
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
}